src/objects/Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Arrival_date__c</fullName>
        <label>Arrival date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Departure_date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Departure date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Schedules</relationshipLabel>
        <relationshipName>Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Route</label>
        <referenceTo>Route__c</referenceTo>
        <relationshipLabel>Schedules</relationshipLabel>
        <relationshipName>schedule_route</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vessel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vessel</label>
        <referenceTo>Vessel__c</referenceTo>
        <relationshipLabel>Schedules</relationshipLabel>
        <relationshipName>Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedules</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>